<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#66000000"
        android:text="@string/please_input_user_name" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" >
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#66000000"
        android:text="@string/please_input_password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName" >
    </EditText>

    <RadioGroup
        android:id="@+id/rg_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rd_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/mode_private" />

        <RadioButton
            android:id="@+id/rd_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_readable" />

        <RadioButton
            android:id="@+id/rd_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_writeable" />

        <RadioButton
            android:id="@+id/rd_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_public" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/cb_save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/save_password" >
        </CheckBox>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" >

            <Button
                android:id="@+id/bt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/bt_register" >
            </Button>

            <Button
                android:id="@+id/bt_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/bt_submit" >
            </Button>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/bt_get_administrator_permission"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_get_administrator_permission" />

    <Button
        android:id="@+id/bt_view_permission"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_view_permission" />

    <Button
        android:id="@+id/bt_show_sd_card_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_show_sd_card_size" />

    <Button
        android:id="@+id/bt_show_TF_card_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_show_TF_card_size" />

</LinearLayout>